output.module.scss - turned off overflow to prevent tooltip hiding;
action-toggle.js - refactoring

--- a/components/output/output.module.scss
+++ b/components/output/output.module.scss
@@ -97,7 +97,7 @@
 
   margin: 5% auto 12px;
   width: 100%;
-  overflow: hidden;
+  //overflow: hidden;
 
   & h4 {
     padding-bottom: 2%;
